--- a/instagram/pubspec.yaml
+++ b/instagram/pubspec.yaml
@@ -54,7 +54,8 @@ flutter:
   - assets/images/alcohol.jpg
   - assets/images/lying.jpg
   - assets/images/relax.jpg
-
+  - assets/images/png1.png
+  - assets/images/png2.png
   
   
 
